<menu xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:compat="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/settings_action_add"
        android:icon="@drawable/ic_action_ic_menu_add"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/settings_action_add"/>
    <item
        android:id="@+id/settings_action_search"
        android:icon="@drawable/ic_action_search_dark"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"        
        android:title="@string/action_search"/>
    <item
        android:id="@+id/settings_action_edit"
        android:icon="@drawable/ic_action_edit"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/settings_action_edit"/>
    <item
        android:id="@+id/settings_action_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/settings_action_delete"/>
    <item
        android:id="@+id/settings_action_about"
        android:icon="@drawable/ic_action_about"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView"
        android:title="@string/action_about"/>
</menu>