<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/sw1_upper_bar_layout"
        style="@style/UpperBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/sw1_image_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/settings_title_description"
            android:paddingLeft="5dip"
            android:src="@drawable/ic_action_settings" />

        <TextView
            android:id="@+id/sw1_title"
            style="@style/UpperBarTitle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/sw1_image_title"
            android:text="@string/sw1_image_title" />

        <View
            style="@style/androidSeparator"
            android:layout_width="fill_parent"
            android:layout_below="@+id/sw1_image_title"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="5sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/sw1LowerBarLayout"
        style="@style/BottomBarLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >
        
        <View
            style="@style/androidSeparator"
            android:layout_width="fill_parent"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="0sp" />

        <Button
            android:id="@+id/sw1NextBtn"
            style="@style/NextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="30sp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/act_next_description"
            android:textAlignment="center" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/sw1_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sw1LowerBarLayout"
        android:layout_below="@+id/sw1_upper_bar_layout"
        android:layout_marginTop="5sp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10sp"
            android:layout_marginRight="10sp" >

            <TextView
                android:id="@+id/sw1StaticServerName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sw1StaticTitle"
                android:layout_marginTop="40dp"
                android:text="@string/sw1_server_name"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/sw1EditServerName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sw1StaticServerName"
                android:ems="10"
                android:hint="@string/sw1_server_name_hint"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:maxLength="10"
                android:singleLine="true"
                android:focusableInTouchMode="true" >

                <requestFocus android:layout_width="wrap_content" />
            </EditText>

            <TextView
                android:id="@+id/sw1StaticServerIP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sw1EditServerName"
                android:text="@string/sw1_server_ip"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/sw1EditServerIP"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sw1StaticServerIP"
                android:ems="10"
                android:hint="@string/sw1_server_ip_hint"
                android:inputType="textNoSuggestions|textVisiblePassword"
                android:maxLength="39"
                android:singleLine="true" >

                <requestFocus android:layout_width="wrap_content" />
            </EditText>

            <TextView
                android:id="@+id/sw1StaticServerPort"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sw1EditServerIP"
                android:layout_centerVertical="true"
                android:text="@string/sw1_server_port"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <EditText
                android:id="@+id/sw1EditServerPort"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/sw1StaticServerPort"
                android:ems="10"
                android:hint="@string/sw1_server_port_hint"
                android:inputType="number"
                android:maxLength="4"
                android:singleLine="true"
                android:text="@string/sw1_server_port_default" >

                <requestFocus android:layout_width="wrap_content" />
            </EditText>

            <TextView
                android:id="@+id/sw1StaticTitle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/sw1_title"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>